I make websites styling and markup

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="container header">
       <div class="row">
         <div class="col-md-12">
-          <h1>Andrew Maney</h1>
-          <h2>I make websites</h2>
+          <h1>Andrew Maney <span>I make websites</span></h1>
+          <!-- <h2>I make websites</h2> -->
         </div>
       </div>
     </div>
