Change order of projects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       <div class="row">
         <div class="col-md-12">
           <h1>Andrew Maney <span>I make websites</span></h1>
-          <!-- <h2>I make websites</h2> -->
         </div>
       </div>
     </div>
@@ -105,38 +104,7 @@
             well, styled components.
           </p>
           <a
-            href="http://www.getchefit.com/"
-            class="btn btn-default"
-            target="_blank"
-            >View Site</a
-          >
-        </div>
-      </div>
-
-      <div class="row project">
-        <div class="col-md-8 project-image">
-          <div class="preview-top">
-            <span class="circle-red"></span>
-            <span class="circle-yellow"></span>
-            <span class="circle-green"></span>
-            <p class="preview-url">https://chefit.com/</p>
-          </div>
-          <img src="images/chefitsite.png" />
-        </div>
-        <div class="col-md-4 blurb">
-          <h3>CHEFIT</h3>
-          <p>
-            CHEFIT is an on-demand personal chef service. I built the app with
-            <span class="node-text">Node.js</span>. I implemented a reservation
-            form as well as payment via
-            <span class="square-text">Square API</span> and automated email via
-            <span class="nodemailer-text">Nodemailer API</span>. I also designed
-            and developed the front-end with vanilla
-            <span class="js-text">JavaScript</span> and
-            <span class="css-text">CSS</span>.
-          </p>
-          <a
-            href="http://www.getchefit.com/"
+            href="https://www.wymanandthewolves.com/"
             class="btn btn-default"
             target="_blank"
             >View Site</a
@@ -224,6 +192,37 @@
           </p>
           <a
             href="http://from-light.com/"
+            class="btn btn-default"
+            target="_blank"
+            >View Site</a
+          >
+        </div>
+      </div>
+
+      <div class="row project">
+        <div class="col-md-8 project-image">
+          <div class="preview-top">
+            <span class="circle-red"></span>
+            <span class="circle-yellow"></span>
+            <span class="circle-green"></span>
+            <p class="preview-url">https://chefit.com/</p>
+          </div>
+          <img src="images/chefitsite.png" />
+        </div>
+        <div class="col-md-4 blurb">
+          <h3>CHEFIT</h3>
+          <p>
+            CHEFIT is an on-demand personal chef service. I built the app with
+            <span class="node-text">Node.js</span>. I implemented a reservation
+            form as well as payment via
+            <span class="square-text">Square API</span> and automated email via
+            <span class="nodemailer-text">Nodemailer API</span>. I also designed
+            and developed the front-end with vanilla
+            <span class="js-text">JavaScript</span> and
+            <span class="css-text">CSS</span>.
+          </p>
+          <a
+            href="http://www.getchefit.com/"
             class="btn btn-default"
             target="_blank"
             >View Site</a
